--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,7 @@ ikiwiki (1.8) UNRELEASED; urgency=low
     Liambotis.
   * Add insane double encode/decode to utf8 around call to markdown.
     This works around a truely strange bug, which is apparently a bug in
-    perl, which I lack space to describe here (see t/crazy-badass-perl-bug.t)
+    perl, #376329. Also added a test case for it.
   * Improve layout of edit page so formatting help link is always visible w/o
     getting in the way of the preview.
 
