--- a/doc/bugs/utf8_html_templates.mdwn
+++ b/doc/bugs/utf8_html_templates.mdwn
@@ -17,4 +17,4 @@ won't cache templates.
 
 Could be approached by using HTML::Template's support for filters. Just make it use a filter that turns on utf-8
 
-Or by subclassing it and overriding the _init_template method, though that's a bit uglier
+Or by subclassing it and overriding the \_init\_template method, though that's a bit uglier
