--- a/doc/todo/utf8.mdwn
+++ b/doc/todo/utf8.mdwn
@@ -7,6 +7,9 @@ Currently ikiwiki is belived to be utf-8 clean itself; it tells perl to use
 binmode when reading possibly binary files (such as images) and it uses
 utf-8 compatable regexps etc.
 
+There may be the odd corner where utf-8 still doesn't work; these are being
+fixed as they're found.
+
 Notes:
 
 * Apache "AddDefaultCharset on" settings will not play well with utf-8
