web commit by KellyClowers

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -13,5 +13,6 @@ This page is to track users of ikiwiki.
 * Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/).
 * Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only.
 * Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog).
+* Kelly Clowers' [personal website](http://www.clowersnet.net/)
 
 See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
