--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ ikiwiki (1.8) UNRELEASED; urgency=low
     getting in the way of the preview.
   * Centralised all calls to HTML::Template and force all the templates
     to be read as utf8.
+  * Support pages with utf8 filenames. Patch by Faidon Liambotis.
 
- -- Joey Hess <joeyh@debian.org>  Sun,  2 Jul 2006 14:55:40 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 16:09:16 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
