--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -4,7 +4,7 @@ install and use plugins contributed by others.
 The [[inline]] and [[htmlscrubber]] plugins are enabled by default.
 
 To enable other plugins, use the `--plugin` switch described in [[usage]],
-or the equivalent line in [[ikiwiki.setup]].
+or the equivalent `add_plugins` line in [[ikiwiki.setup]].
 
 # Plugin directory
 
