--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,12 @@ ikiwiki (1.8) UNRELEASED; urgency=low
   * Centralised all calls to HTML::Template and force all the templates
     to be read as utf8.
   * Support pages with utf8 filenames. Patch by Faidon Liambotis.
+  * Introduce add_plugins and disable_plugins config options in setup files.
+    This allows adding or removing plugins w/o overriding the whole list of
+    default plugins, which makes it easier to upgrade when new default plugins
+    are added.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 16:17:20 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 16:57:37 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
