--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,8 +1,8 @@
 [[ikiwiki_logo|logo/ikiwiki.png]]  
 ikiwiki is a **wiki compiler**. It converts wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
-wiki, ikiwiki does not have its own means of storing page history or its own
-markup language. Instead it can use [[Subversion]] (or [[Git]]) and [[MarkDown]].
+wiki, ikiwiki does not have its own means of storing page history.
+Instead it can use [[Subversion]] (or [[Git]]).
 
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki. It's the best way to find out when there's a new version to [[Download]].
 
