--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -11,7 +11,8 @@ ikiwiki --setup configfile
 # DESCRIPTION
 
 `ikiwiki` is a wiki compiler. It builds static html pages for a wiki, from
-`source` in the [[MarkDown]] language, and writes it out to `destination`.
+`source` in the [[MarkDown]] language (or others), and writes it out to
+`destination`.
 
 Note that most options can be shortened to single letters, and boolean
 flags such as --verbose can be negated with --no-verbose.
