--- a/basewiki/markdown.mdwn
+++ b/basewiki/markdown.mdwn
@@ -1,6 +1,6 @@
 [Markdown](http://daringfireball.net/projects/markdown/)
 is a minimal markup language that resembles plain text as used in
-email messages. It is the markup language used by this wiki.
+email messages. It is the markup language used by this wiki by default.
 
 For documentation about the markdown syntax, see [[HelpOnFormatting]] and
 [Markdown: syntax](http://daringfireball.net/projects/markdown/syntax).
