--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,13 @@ ikiwiki (1.8) UNRELEASED; urgency=low
     are added.
   * Support htmlize plugins and make mdwn one such plugin, which is enabled by
     default (of course!). Based on a patch by Faidon Liambotis.
+  * Add a html plugin, which can be used to write wikis in raw html,
+    if you'd ever want to do such a thing. Slightly tricky, since ikiwiki
+    defaults to not processing .html files, since w/o this plugin they would
+    be copied unsanitised. With this plugin, it will process, and html
+    sanitise, them like any other page type.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 18:06:49 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 18:15:30 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
