--- a/doc/plugins/mdwn.mdwn
+++ b/doc/plugins/mdwn.mdwn
@@ -1,3 +1,3 @@
 This plugin, which is enabled by default, lets ikwiki convert files with
-names ending in ".mwdn" to html. It uses the [[markdown]] minimal markup
+names ending in ".mdwn" to html. It uses the [[markdown]] minimal markup
 language.
