--- a/doc/todo/onlinepageediting.mdwn
+++ b/doc/todo/onlinepageediting.mdwn
@@ -1,3 +1,7 @@
 * Eventually, might want page deletion.
 * Eventually, might want file upload.
 * Page move? Link corrections?
+* Way to specify type of page (especailly when creating a new page).
+  Will be more important once there are multiple page types implemented,
+  to choose between markdown, restructured text, etc. Note that the default
+  type for new pages is already configurable globally.
