--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -1,5 +1,7 @@
 Suggestions of ideas for plugins:
 
+* Support for restructured text (should be semi-easy to add basic support
+  now)
 * list of registered users - tricky because it sorta calls for a way to rebuild the page when a new user is registered. Might be better as a cgi?
 * a [[link_map]]
 * [[sigs]] ?
