--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -74,7 +74,7 @@ Some of ikiwiki's features:
 * [[PageHistory]]
 
   Well, sorta. Rather than implementing YA history browser, it can link to
-  [[ViewCVS]] or the link to browse the history of a wiki page.
+  [[ViewCVS]] or the like to browse the history of a wiki page.
 
 * [[RecentChanges]], editing pages in a web browser
 
