--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -5,7 +5,8 @@ This is the roadmap for ikiwiki drevelopment.
 Generally usable release.
 
 * No severe [[security]] bugs.
-* All the [[features]] people would expect in a wiki. Needs to be a plausable promise of being a wiki that people can commit to [[using|ikiwikiusers]].
+* All the [[features]] people would expect in a wiki. Needs to be a plausable
+  promise of being a wiki that people can commit to [[using|ikiwikiusers]].
 
 Released 29 April 2006.
 
@@ -16,8 +17,10 @@ Released 29 April 2006.
 * [[Plugins]] 
 * [[Tags]]
 * Should have fully working [[todo/utf8]] support.
-* [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
+* [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
+  scalability issues.
 * improved [[todo/html]] stylesheets and templates
 * Improved [[logo]].
-* Support for at least one RCS aside from svn. Once it supports two, it should quickly grow to support them all.. See [[about_rcs_backends]]
+* Support for at least one RCS aside from svn. Once it supports two, it should
+  quickly grow to support them all.. See [[about_rcs_backends]]
 * Support for one other markup language, probably restructured text.
