--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -1,4 +1,4 @@
-This page is to track users of ikiwiki.
+Sites that are using ikiwiki include:
 
 * [This wiki](http://ikiwiki.kitenet.net) (of course!)
 * [[Joey]]'s [homepage](http://kitenet.net/~joey/), including his weblog
@@ -14,5 +14,7 @@ This page is to track users of ikiwiki.
 * Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only.
 * Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog).
 * Kelly Clowers' [personal website](http://www.clowersnet.net/)
+
+Please feel free to add your own ikiwiki site!
 
 See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
