--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -24,7 +24,8 @@ These options control the mode that ikiwiki is operating in.
 * --refresh
 
   Refresh the wiki, updating any changed pages. This is the default
-  behavior so you don't normally need to specify it.
+  behavior so you don't normally need to specify it. If used with -setup also
+  updates any configured wrappers.
 
 * --rebuild
 
