--- a/debian/changelog
+++ b/debian/changelog
@@ -37,8 +37,9 @@ ikiwiki (1.8) UNRELEASED; urgency=low
   * Rebuilding wrappers is necessary on upgrade to this version.
   * Make ikiwiki --setup --refresh rebuild wrappers, so wrapper rebuild
     will be automatically done on all upgrades.
+  * Don't sent pings if the wiki is being rebuilt.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 20:24:18 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  3 Jul 2006 21:01:28 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
