--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -1,5 +1,4 @@
-Create some nice stylesheets. Make RecentChanges use table for
-formatting, and images to indicate web vs svn commits and to link to diffs.
+Create some nice(r) stylesheets.
 
-All of this should be doable w/o touching a single line of code, just
-editing the [[templates]] and/or editing [[style.css]] BTW.
+Should be doable w/o touching a single line of code, just
+editing the [[templates]] and/or editing [[style.css]].
