--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -158,7 +158,7 @@ These options configure the wiki.
 
   Specifies the email address that ikiwiki should use for sending email.
 
-* --diffurl http://url/trunk/\[[file]]?root=wiki&r1=\[[r1]]&r2=\[[r2]]
+* --diffurl http://url/trunk/\[[file]]?root=wiki&amp;r1=\[[r1]]&amp;r2=\[[r2]]
 
   Specifies the url to link to for a diff of changes to a page. In the url,
   "\[[file]]" is replaced with the file to browse, "\[[r1]]" is the old
