* Memoize abs2rel, which is still kinda slow, for another 30% speedup   in time to build the doc wiki.

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,8 +46,10 @@ ikiwiki (1.8) UNRELEASED; urgency=low
     No code changes involved.
   * Encode & in diffurl in examples, to conform to pedantic rules.
   * Speed up RecentChanges by another 40% or so with some memoization.
+  * Memoize abs2rel, which is still kinda slow, for another 30% speedup
+    in time to build the doc wiki.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  4 Jul 2006 12:16:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  4 Jul 2006 12:22:57 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
