--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.8) UNRELEASED; urgency=low
+ikiwiki (1.8) unstable; urgency=low
 
   * Fix orphans plugin to not count a link to a nonexistant page as a reason
     for a page not being an orphan.
@@ -49,7 +49,7 @@ ikiwiki (1.8) UNRELEASED; urgency=low
   * Memoize abs2rel, which is still kinda slow, for another 30% speedup
     in time to build the doc wiki.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  4 Jul 2006 12:22:57 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  4 Jul 2006 12:46:29 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
