* Improve display of parentlinks and page title of toplevel index page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.9) UNRELEASED; urgency=low
+
+  * Improve display of parentlinks and page title of toplevel index page.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  4 Jul 2006 15:41:16 -0400
+
 ikiwiki (1.8) unstable; urgency=low
 
   * Fix orphans plugin to not count a link to a nonexistant page as a reason
