meta done a while ago

--- a/doc/todo/metadata.mdwn
+++ b/doc/todo/metadata.mdwn
@@ -15,3 +15,5 @@ Uses for this include:
 [[meta title="supporting metadata..."]]
 [[meta author="Joey Hess"]]
 [[meta link="foo.css" rel="stylesheet" type="text/css"]]
+
+[[todo/done]]
