--- a/doc/todo/automatic_rebuilding_of_html_pages.mdwn
+++ b/doc/todo/automatic_rebuilding_of_html_pages.mdwn
@@ -2,4 +2,4 @@ It seems that pages like [[Todo]] aren't rebuilt automatically when a new item i
 
 AFAIK this is working ok. For example, this page appears in [[TODO]]. Maybe you need to force-refresh the page in your web browser? --[[Joey]]
 
-[[done]]
+[[todo/done]]
