--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ ikiwiki (1.9) UNRELEASED; urgency=low
   * Improve display of parentlinks and page title of toplevel index page.
   * Patch from Faidon to use svn --limit when possible for recentchanges,
     speeds up recentchanges a lot for wikis with more history.
+  * Patch from Recai to fix utf8 issues in git backend.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  5 Jul 2006 13:33:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed,  5 Jul 2006 16:53:34 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
