* Add wikitext markup plugin, which supports ".wiki" pages written in the   original wiki syntax, CamelCase links and all.

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -23,11 +23,12 @@ Some of ikiwiki's features:
   page with a filename ending in ".mdwn" is converted from markdown to html
   by ikiwiki. Markdown understands text formatted as it would be in an email,
   and is quite smart about converting it to html. The only additional markup
-  provided by ikiwiki aside from regular markdown is the [[WikiLink]] and 
+  provided by ikiwiki on top of regular markdown is the [[WikiLink]] and 
   [[PreprocessorDirective]]
 
   If you prefer to use some other markup language, ikiwiki allows others to
-  be added by [[plugins]].
+  easily be added by [[plugins]]. For example it also supports traditional
+  [[plugins/WikiText]] formatted pages.
 
 * support for other file types
 
