--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -6,7 +6,8 @@ perl modules if available: `CGI::Session` `CGI::FormBuilder` (version
 `Date::Parse` (libtimedate-perl), `HTML::Scrubber`, `RPC::XML`,
 `XML::Simple`
 
-If you want to install from the tarball, you should make sure that the required perl modules are installed, then run:
+If you want to install from the tarball, you should make sure that the
+required perl modules are installed, then run:
 
         perl Makefile.PL
         make
