--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ ikiwiki (1.9) UNRELEASED; urgency=low
   * Patch from Faidon to use svn --limit when possible for recentchanges,
     speeds up recentchanges a lot for wikis with more history.
   * Patch from Recai to fix utf8 issues in git backend.
+  * Add wikitext markup plugin, which supports ".wiki" pages written in the
+    original wiki syntax, CamelCase links and all.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  5 Jul 2006 16:53:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  7 Jul 2006 14:11:50 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
