--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -28,7 +28,8 @@ Some of ikiwiki's features:
 
   If you prefer to use some other markup language, ikiwiki allows others to
   easily be added by [[plugins]]. For example it also supports traditional
-  [[plugins/WikiText]] formatted pages.
+  [[plugins/WikiText]] formatted pages or pages written as pure
+  [[plugins/HTML]].
 
 * support for other file types
 
