web commit from 127.0.0.1

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -38,9 +38,10 @@ Some of ikiwiki's features:
   unchanged by ikiwiki as it builds your wiki. So you can check in an image,
   program, or other special file and link to it from your wiki pages.
 
-* [[SubPage]]s
+* [[SubPages|SubPage]]
 
-  Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRules]]
+  Arbitrarily deep hierarchies of pages with fairly simple and useful
+  [[SubPage/LinkingRules]]
 
 * [[blogging|blog]]
 
@@ -134,6 +135,11 @@ Some of ikiwiki's features:
 
   After rather a lot of fiddling, we think that ikiwiki correctly and fully
   supports utf8 everywhere.
+
+* [[serverless]] mode
+
+  Can be set up so that w3m can be used to browse a wiki and edit pages
+  without using a web server.
 
 ----
 
