--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -136,7 +136,7 @@ Some of ikiwiki's features:
   After rather a lot of fiddling, we think that ikiwiki correctly and fully
   supports utf8 everywhere.
 
-* [[serverless]] mode
+* [[w3mmode]]
 
   Can be set up so that w3m can be used to browse a wiki and edit pages
   without using a web server.
