* Display CGI processing errors if present.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ ikiwiki (1.9) UNRELEASED; urgency=low
     original wiki syntax, CamelCase links and all.
   * Support a w3mmode, which lets w3m run ikiwiki using its local CGI
     support, to edit pages etc without a web server.
+  * Display CGI processing errors if present.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  7 Jul 2006 14:11:50 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Jul 2006 17:12:57 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
