--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,11 @@ ikiwiki (1.9) UNRELEASED; urgency=low
   * Support a w3mmode, which lets w3m run ikiwiki using its local CGI
     support, to edit pages etc without a web server.
   * Display CGI processing errors if present.
+  * Fix from Faidon for a XML parser issue that breaks utf-8 for
+    RecentChanges. Avoid using XML::SAX::PurePerl, which is buggy in this
+    area, and also way slow.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 10 Jul 2006 17:12:57 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 11 Jul 2006 14:37:30 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
