web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -12,6 +12,8 @@ Instead it can use [[Subversion]] (or [[Git]]).
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
 
+* Developers, please document any ikiwiki patches you have in the [[PatchQueue]].
+
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
 ikiwiki is developed by [[Joey]] and is [[FreeSoftware]].
