* Consolidated all decode_utf8 in FormBuilder's fields to make the code more   readable and avoid future mistakes. The patch seems to work and for the   first time I have a UTF-8 username ;-) (Faidon) * Use form->field consistently, not form->param.

--- a/doc/patchqueue/decode-from.mdwn
+++ b/doc/patchqueue/decode-from.mdwn
@@ -1,3 +1,5 @@
+Wow, big hammer! [[patchqueue/Done]] though, with minor mods -- [[Joey]].
+
 From [[Faidon]]:
 
 I consolidated all decode_utf8 in FormBuilder's fields
