--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,12 @@ ikiwiki (1.9) UNRELEASED; urgency=low
     area, and also way slow.
   * Match 'web commit from' in SVN and git, these are web commits too.
     (Faidon)
+  * Consolidated all decode_utf8 in FormBuilder's fields to make the code more
+    readable and avoid future mistakes. The patch seems to work and for the
+    first time I have a UTF-8 username ;-) (Faidon)
+  * Use form->field consistently, not form->param.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 11 Jul 2006 16:54:00 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 11 Jul 2006 17:18:39 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
