--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,11 @@ ikiwiki (1.9) UNRELEASED; urgency=low
     readable and avoid future mistakes. The patch seems to work and for the
     first time I have a UTF-8 username ;-) (Faidon)
   * Use form->field consistently, not form->param.
+  * Patch from Recai to allow selection of page type when creating a new page.
+    Default page type is inherited from the link clicked on to create the new
+    page.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 11 Jul 2006 17:18:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 26 Jul 2006 16:48:43 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
