--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -1,7 +1,8 @@
 # Help on formatting text
 
-Text on this wiki is written in a form very close to how you might write
-text for an email message.
+Text on this wiki is, by default, written in a form very close to how you
+might write text for an email message. This style of text formatting is
+called [[MarkDown]], and it works like this:
 
 Leave blank lines between paragraphs.
 
@@ -57,7 +58,3 @@ stuff.
 
 Also, if the smiley plugin is enabled in your wiki, you can insert
 [[smileys]] and some other useful symbols.
-
-----
-
-This style of text formatting is called [[MarkDown]].
