--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.9) UNRELEASED; urgency=low
+ikiwiki (1.9) unstable; urgency=low
 
   * Improve display of parentlinks and page title of toplevel index page.
   * Patch from Faidon to use svn --limit when possible for recentchanges,
@@ -22,7 +22,7 @@ ikiwiki (1.9) UNRELEASED; urgency=low
     Default page type is inherited from the link clicked on to create the new
     page.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 26 Jul 2006 16:48:43 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 26 Jul 2006 17:25:30 -0400
 
 ikiwiki (1.8) unstable; urgency=low
 
