web commit by joey

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -62,6 +62,7 @@ Bulleted list
 * <http://www.gnu.org/>
 * [GNU](http://www.gnu.org/)
 * [Email](mailto:noone@invalid)
+* WikiLink without any markup.
 
 -----
 
